# tesseravcr

./: .gitignore  DEPLOY-CHECKLIST.md  DEPLOY-PLAN.md  NEXT.md  README.md  hn.txt
.github/workflows/: docker-publish.yml
spec/: README.md  TESSERA.md  TEST-VECTORS.json  VCR-SPEC.md  WHITEPAPER.md
tessera-network/: README.md  config.py  consumer.py  demo_agents.py  generate_visuals.py  join_network.py  ledger.py  log_server.py  log_store.py  merkle.py  node.py  provider.py  royalties.py  test_network.py  transparency.py  verify_artifacts.py
tessera-network/visualizations/: index.html
tessera-py/: README.md  demo.py  generate_test_vectors.py  pyproject.toml
tessera-py/examples/nitro-tee/: Dockerfile  README.md  enclave_app.py  parent_client.py  sample_attestation.json
tessera-py/examples/zk-prove/: prove.py  sample_proof.json
tessera-py/protocol/: ezkl_backend.py  receipt.py  registry.py  settlement.py  stake.py  tee_backend.py  transfer.py  transparency.py
tessera-py/tests/: test_adversarial.py  test_edge_cases.py  test_incentives.py  test_protocol.py
tessera-py/tools/: verify_attestation.py
tessera-rust/: .gitignore  Cargo.toml
tessera-rust/tessera/: Cargo.toml
tessera-rust/tessera-log-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
tessera-rust/tessera-log-server/deploy/: .env.example  Caddyfile  README.md  docker-compose.prod.yml  setup.sh
tessera-rust/tessera-log-server/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  store.rs  witness.rs
tessera-rust/tessera-log-server/tests/: integration.rs
tessera-rust/tessera/src/: lib.rs  merkle.rs  receipt.rs  transfer.rs
tessera-rust/tessera/tests/: TEST-VECTORS.json  conformance.rs  merkle_conformance.rs
tesseravcr.github.io/: index.html  network.html
