[package]
name = "tessera"
version = "0.1.0"
edition = "2021"
description = "Conformant Rust implementation of the VCR protocol"
license = "MIT"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

[[test]]
name = "conformance"
path = "tests/conformance.rs"

[[test]]
name = "merkle_conformance"
path = "tests/merkle_conformance.rs"
